# flight-pack

./: .env.sample  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  babel.config.js  package.json  tailwind.config.js  webpack.config.js
docs/: diff.md
js/: airports.js  googlemap.js  index.html  index.js
json/: airports.json  arrivals_changi.json  arrivals_hongkong.json  arrivals_manila.json  arrivals_saigon.json  arrivals_taiwan.json
src/: app.rs  constants.rs  lib.rs  manager.rs  proxy.rs  request.rs  utils.rs
src/aviation/: airport.rs  arrival.rs  flight.rs  mod.rs  reference.rs
src/dimension/: canvas.rs  geo.rs  mod.rs  point.rs  window.rs
static/: index.html
tests/: app.rs
