# You must change these to your own details.
[package]
name = "flight-pack"
description = "Flight simulation using wasm-pack"
version = "0.1.0"
authors = ["Hiroki Minagawa <minagawa@tokyo800.jp>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
# default = ["wee_alloc"]

[dependencies]
js-sys = "0.3.58"
serde = { version = "1.0.140", features = ["derive"] }
# wasm-bindgen = "0.2.45"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower
# than the default allocator, so it's not enabled by default.
# wee_alloc = { version = "0.4.2", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
# version = "0.3.22"
# features = ["console"]
version = "0.3.58"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Window',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
# console_error_panic_hook = "0.1.5"
console_error_panic_hook = "0.1.7"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
# js-sys = "0.3.22"
js-sys = "0.3.58"
wasm-bindgen-futures = "0.3.22"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
