# You must change these to your own details.
[package]
name = "flight-pack"
description = "A demo app using wasm-pack-plugin, drawing flight information on Google Map."
version = "0.1.1"
authors = ["Hiroki Minagawa <minagawa@tokyo800.jp>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
callback-future = "0.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3.23"
geoutils = "0.5.1"
js-sys = "0.3.58"
lazy_static = "1.4.0"
load-dotenv = "0.1.2"
num = "0.4.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.83"
# wasm-bindgen = "0.2.45"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"

[dependencies.rand]
version = "0.7.3"
features = ["wasm-bindgen"]

[dependencies.web-sys]
# version = "0.3.22"
# features = ["console"]
version = "0.3.58"
features = [
  'console',
  'CssStyleDeclaration',
  'CanvasRenderingContext2d',
  'Document',
  'DomRect',
  'Element',
  'Headers',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'TextMetrics',
  'Window',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
# console_error_panic_hook = "0.1.5"
console_error_panic_hook = "0.1.7"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
# js-sys = "0.3.22"
js-sys = "0.3.58"
wasm-bindgen-futures = "0.3.22"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
